# scapar

./: Makefile.in  Makefile.inc.in  README.md  configure  configure.in
example/: Makefile  gen_perf.c  large.c  mem.sh  misc.c  nsection.c  perf.c  scalar.c  section.c  struct.c  table.c  user-mat.c  vec-section.c  vec.c
include/: Makefile  scapar-config.h.in  scapar-sec-op.h  scapar-sec.h  scapar-table.h  scapar-types.h  scapar-utils.h  scapar-vec-op.h  scapar-vec.h  scapar.h
src/: Makefile  Makefile.dep  scapar-sec.c  scapar-table.c  scapar-utils.c  scapar-vec.c  scapar.c  tags
utils/: makedeps
